// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`password should validate at least one digit 1`] = `
[
  {
    "code": "custom",
    "message": "Invalid input",
    "params": {
      "code": "invalid_password_no_digit",
      "isNestJsZod": true,
    },
    "path": [],
  },
]
`;

exports[`password should validate at least one lowercase 1`] = `
[
  {
    "code": "custom",
    "message": "Invalid input",
    "params": {
      "code": "invalid_password_no_lowercase",
      "isNestJsZod": true,
    },
    "path": [],
  },
]
`;

exports[`password should validate at least one special 1`] = `
[
  {
    "code": "custom",
    "message": "Invalid input",
    "params": {
      "code": "invalid_password_no_special",
      "isNestJsZod": true,
    },
    "path": [],
  },
]
`;

exports[`password should validate at least one uppercase 1`] = `
[
  {
    "code": "custom",
    "message": "Invalid input",
    "params": {
      "code": "invalid_password_no_uppercase",
      "isNestJsZod": true,
    },
    "path": [],
  },
]
`;

exports[`password should validate min/max length 1`] = `
[
  {
    "code": "too_small",
    "inclusive": true,
    "message": "Invalid input",
    "minimum": 8,
    "path": [],
    "type": "password",
  },
]
`;

exports[`password should validate min/max length 2`] = `
[
  {
    "code": "too_big",
    "inclusive": true,
    "maximum": 20,
    "message": "Invalid input",
    "path": [],
    "type": "password",
  },
]
`;

exports[`password should validate type 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "string",
    "message": "Required",
    "path": [],
    "received": "undefined",
  },
]
`;

exports[`password should validate type 2`] = `
[
  {
    "code": "invalid_type",
    "expected": "string",
    "message": "Expected string, received number",
    "path": [],
    "received": "number",
  },
]
`;
